--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ codecov==2.0.15
 coreapi==2.3.3
 coreschema==0.0.4
 coverage==4.5.4
+dj-database-url==0.5.0
 Django==2.2.7
 django-email-auth==0.1.5
 django-phonenumber-field==3.0.1
@@ -17,6 +18,7 @@ django-rest-swagger==2.2.0
 djangorestframework==3.9.4
 entrypoints==0.3
 flake8==3.7.9
+gunicorn==20.0.4
 idna==2.8
 importlib-metadata==1.1.0
 itypes==1.1.0
@@ -50,4 +52,5 @@ typed-ast==1.4.0
 uritemplate==3.0.0
 urllib3==1.25.7
 wcwidth==0.1.7
+whitenoise==4.1.4
 zipp==0.6.0
